--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "This is todolist project.",
   "main": "list.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Ak",
   "license": "ISC",
+  "node": "14.17.5",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^14.2.0",
